--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
                 <!-- <p class="text-center">Your Social Campaigns</p> -->
                 <form>
                   <div class="mb-3">
+        
+                    <label for="exampleInputEmail1" class="form-label">Designation</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Login Type</option>
+                      <option value="1">Doctor</option>
+                      <option value="2">Receptionist</option>
+                      <option value="3">Lab</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+        
                     <label for="exampleInputEmail1" class="form-label">Username</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                   </div>
